# Proyecto-Integrador

./: .gitignore  CMakeLists.txt  ServicioStreaming.cpp  datos.txt  episodio.cpp  episodio.h  main.cpp  pelicula.cpp  pelicula.h  serie.cpp  serie.h  serviciostreaming.cpp  serviciostreaming.h  sonar-project.properties  video.cpp  video.h
.github/workflows/: build.yml
tests/: datos_test_txt  streamings_tests.cpp  tests.cpp
